--- a/src/sac/CarvInsight/view/Assignment.form
+++ b/src/sac/CarvInsight/view/Assignment.form
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+  <Properties>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[800, 660]"/>
+    </Property>
+  </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
@@ -73,8 +78,8 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="0">
                     <Column editable="true" title="Id_Assignment" type="java.lang.Object"/>
-                    <Column editable="true" title="Id_Machine" type="java.lang.Object"/>
-                    <Column editable="true" title="Id_Prod" type="java.lang.Object"/>
+                    <Column editable="true" title="Machine" type="java.lang.Object"/>
+                    <Column editable="true" title="Type" type="java.lang.Object"/>
                     <Column editable="true" title="Description" type="java.lang.Object"/>
                   </Table>
                 </Property>
